--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "RobertGrubb/phpsass",
+    "name": "robertgrubb/phpsass",
     "description": "PHPSass is a PHP compiler for SASS, a popular CSS pre-processor language.",
     "license": "BSD-2-Clause",
     "homepage": "http://phpsass.com",
